--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 site.base.url.http=http://localhost:8080
 token.validity.in.seconds=300
 # 5 minutes to validity email
+#******************************************
+##Twilio and phone number verification
+#******************************************
+twilio.accountSid=AC34f7bb4bd67b947f88a4c04e3d0df059
+twilio.authToken=87b04125e6e3ab43da6c31a5736541c1
+twilio.phoneNumber=+201024855747
