accept Request from Donation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
@@ -21,10 +21,6 @@ spring.jpa.properties.hibernate.show_sql=true
 #******************************************
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui/index.html
-#******************************************
-# Open AI
-#******************************************
-gemini.api.key=AIzaSyAA2v89cvWx_2QFdxvmRuNl0Pu0nejmJSQ
 #******************************************
 #Security
 #******************************************
