--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,13 @@
             <version>9.0.0-rc.5</version>
         </dependency>
 
+        <!-- Firebase Admin SDK -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>jakarta.annotation</groupId>
@@ -167,6 +174,10 @@
             <version>2.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
 
     </dependencies>
