--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
@@ -44,3 +44,10 @@ site.base.url.http=http://localhost:8080
 twilio.accountSid=AC34f7bb4bd67b947f88a4c04e3d0df059
 twilio.authToken=87b04125e6e3ab43da6c31a5736541c1
 twilio.phoneNumber=+201024855747
+#******************************************
+# Redis Configuration
+#******************************************
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+logging.level.org.springframework.data.redis=info
+spring.cache.redis.time-to-live=300000
