--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.spatial.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+# Log SQL queries with parameter values (for detailed debugging)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction.interceptor=TRACE
 #******************************************
 #swagger
 #******************************************
