Handle Caching with delete Request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.properties.hibernate.show_sql=true
 # Log SQL queries with parameter values (for detailed debugging)
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.hibernate.SQL=DEBUG
 #******************************************
 #swagger
 #******************************************
@@ -41,12 +42,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 token.validity.in.seconds=3600
 site.base.url.http=http://localhost:8080
-#******************************************
-##Twilio and phone number verification
-#******************************************
-twilio.accountSid=AC34f7bb4bd67b947f88a4c04e3d0df059
-twilio.authToken=87b04125e6e3ab43da6c31a5736541c1
-twilio.phoneNumber=+201024855747
 #******************************************
 # Redis Configuration
 #******************************************
