--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,6 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.spatial.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-# Log SQL queries with parameter values (for detailed debugging)
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.hibernate.SQL=DEBUG
 #******************************************
 #swagger
 #******************************************
@@ -49,3 +45,11 @@ spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
 logging.level.org.springframework.data.redis=info
 spring.cache.redis.time-to-live=300000
+#******************************************
+# logging Configuration
+#******************************************
+logging.level.com.google.firebase=DEBUG
+# Log SQL queries with parameter values (for detailed debugging)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.hibernate.SQL=DEBUG
