--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,13 +37,12 @@ spring.mail.password=muna xfvw tstf wwtl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 token.validity.in.seconds=3600
-site.base.url.http=http://localhost:8080
+token.base.url=http://localhost:8080
 #******************************************
 # Redis Configuration
 #******************************************
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
-logging.level.org.springframework.data.redis=info
 spring.cache.redis.time-to-live=300000
 #******************************************
 # logging Configuration
@@ -53,3 +52,5 @@ logging.level.com.google.firebase=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.data.redis=info
+#spring.main.allow-circular-references=true
