--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,4 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.data.redis=info
 #spring.main.allow-circular-references=true
+cors.allowed-origins=http://localhost:8080,http://localhost:4200
