Deploy base url

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,10 +21,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # --- Token Configuration ---
 token.validity.in.seconds=3600
-token.base.url=https://your-production-domain.com
+token.base.url=https://nuqta-production.up.railway.app
 # Swagger - consider disabling in production or securing it
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 #security
-cors.allowed-origins=http://localhost:8080,http://localhost:4200
-
+cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
+spring.jpa.open-in-view=false
