--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.data.redis=info
 #spring.main.allow-circular-references=true
 cors.allowed-origins=http://localhost:8080,http://localhost:4200
+spring.jpa.open-in-view=false
