--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,4 @@ logging.level.org.springframework.data.redis=info
 #spring.main.allow-circular-references=true
 cors.allowed-origins=http://localhost:8080,http://localhost:4200
 spring.jpa.open-in-view=false
+server.port=${PORT:8080}
