--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,3 +28,5 @@ springdoc.api-docs.enabled=true
 #security
 cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
+server.port=${PORT:8080}
+server.address=0.0.0.0
