--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,5 @@ logging.level.org.springframework.data.redis=info
 cors.allowed-origins=http://localhost:8080,http://localhost:4200
 spring.jpa.open-in-view=false
 server.port=${PORT:8080}
+server.address=0.0.0.0
+spring.profiles.active=prod
