--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,12 +3,12 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-# Redis configuration for caching (only)
+# Redis Configuration for Caching
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
 spring.cache.redis.time-to-live=300000
 spring.data.redis.url=${REDIS_URL}
-# JPA settings for production
+# JPA Settings for Production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 # Security Configuration for JWT
@@ -26,9 +26,9 @@ token.base.url=https://nuqta-production.up.railway.app
 # Swagger (consider disabling in production or securing it)
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
-# Security settings
+# Security Settings (CORS allowed origins)
 cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
-# Server settings
+# Server Configuration
 server.port=${PORT:8080}
 server.address=0.0.0.0
