--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-# Database Configuration
+# Database Configuration using Environment Variables
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
@@ -8,7 +8,7 @@ spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
 spring.cache.redis.time-to-live=300000
 spring.data.redis.url=${REDIS_URL}
-# JPA Settings for Production
+# JPA settings for production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 # Security Configuration for JWT
@@ -26,9 +26,9 @@ token.base.url=https://nuqta-production.up.railway.app
 # Swagger (consider disabling in production or securing it)
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
-# Security Settings (CORS allowed origins)
+# Security settings
 cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
-# Server Configuration
+# Server settings
 server.port=${PORT:8080}
 server.address=0.0.0.0
