--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.pool-name=HikariPool-1
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Redis Configuration for Caching
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
