--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -33,5 +33,5 @@ springdoc.api-docs.enabled=false
 cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
 # Server settings
-server.port=${PORT:8080}
+server.port=${PORT}
 server.address=0.0.0.0
