--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,5 +56,5 @@ logging.level.org.springframework.data.redis=info
 #spring.main.allow-circular-references=true
 cors.allowed-origins=http://localhost:8080,http://localhost:4200
 spring.jpa.open-in-view=false
-server.port=${PORT:8080}
-#spring.profiles.active=prod
+server.port=${PORT}
+spring.profiles.active=prod
