--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,37 +1,65 @@
+#******************************************
 # Database Configuration using Environment Variables
+#******************************************
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.pool-name=HikariPool-1
-spring.datasource.hikari.maximum-pool-size=10
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#******************************************
 # Redis Configuration for Caching
+#******************************************
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
 spring.cache.redis.time-to-live=300000
 spring.data.redis.url=${REDIS_URL}
+#******************************************
 # JPA settings for production
+#******************************************
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+#******************************************
+# JPA (Hibernate) settings
+#******************************************
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.spatial.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+#******************************************
 # Security Configuration for JWT
+#******************************************
 security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.expiration-time=2592000000
+#******************************************
 # Email Configuration (using environment variables)
+#******************************************
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#******************************************
 # Token Configuration
+#******************************************
 token.validity.in.seconds=3600
 token.base.url=https://nuqta-production.up.railway.app
-# Swagger (consider disabling in production or securing it)
-springdoc.swagger-ui.enabled=false
-springdoc.api-docs.enabled=false
+#******************************************
+#swagger
+#******************************************
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
+#******************************************
 # Security settings
+#******************************************
 cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT}
-server.address=0.0.0.0
+#server.address=0.0.0.0
+logging.level.com.google.firebase=DEBUG
+# Log SQL queries with parameter values (for detailed debugging)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.data.redis=info
