--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.mail.password=muna xfvw tstf wwtl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 token.validity.in.seconds=3600
-token.base.url=http://localhost:8080
+token.base.url=http://localhost:8090
 #******************************************
 # Redis Configuration
 #******************************************
@@ -54,7 +54,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.data.redis=info
 #spring.main.allow-circular-references=true
-cors.allowed-origins=http://localhost:8080,http://localhost:4200
+cors.allowed-origins=http://localhost:8090,http://localhost:4200
 spring.jpa.open-in-view=false
-server.port=${PORT}
-spring.profiles.active=prod
+server.port=${PORT:8090}
+#spring.profiles.active=prod
