--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,7 +43,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Token Configuration
 #******************************************
 token.validity.in.seconds=3600
-token.base.url=https://nuqta-production.up.railway.app
+token.base.url=https://nuqta.up.railway.app
 #******************************************
 #swagger
 #******************************************
@@ -52,7 +52,7 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 #******************************************
 # Security settings
 #******************************************
-cors.allowed-origins=https://nuqta-production.up.railway.app,http://localhost:4200
+cors.allowed-origins=https://nuqta.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT}
