--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,7 +16,7 @@ spring.data.redis.url=${REDIS_URL}
 # JPA settings for production
 #******************************************
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
@@ -56,10 +56,5 @@ cors.allowed-origins=https://nuqta.up.railway.app,http://localhost:4200
 spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT}
-#server.address=0.0.0.0
-logging.level.com.google.firebase=DEBUG
-# Log SQL queries with parameter values (for detailed debugging)
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.data.redis=info
+server.address=0.0.0.0
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
