--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,6 +17,8 @@ spring.data.redis.url=${REDIS_URL}
 #******************************************
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
+logging.level.com.zaxxer.hikari=DEBUG
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
