--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=10
 #******************************************
 # Redis Configuration for Caching
 #******************************************
@@ -17,14 +20,10 @@ spring.data.redis.url=${REDIS_URL}
 #******************************************
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.hikari.maximum-pool-size=10
-logging.level.com.zaxxer.hikari=DEBUG
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
 spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.spatial.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 #******************************************
