--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -44,7 +44,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Token Configuration
 #******************************************
 token.validity.in.seconds=3600
-token.base.url=https://nuqta.up.railway.app
+token.base.url=${BASE_URL}
 #******************************************
 #swagger
 #******************************************
@@ -53,7 +53,7 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 #******************************************
 # Security settings
 #******************************************
-cors.allowed-origins=https://nuqta.up.railway.app,http://localhost:4200
+cors.allowed-origins=${BASE_URL,FRONT_BASE_URL}
 spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT}
