--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -53,7 +53,7 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 #******************************************
 # Security settings
 #******************************************
-cors.allowed-origins=${BASE_URL,FRONT_BASE_URL}
+cors.allowed-origins=${BASE_URL},${FRONT_BASE_URL}
 spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT}
