--- a/pom.xml
+++ b/pom.xml
@@ -76,12 +76,6 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <!-- Geospatial libraries -->
-        <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-spatial</artifactId>
-            <version>6.6.2.Final</version>
-        </dependency>
 
         <!-- Lombok for reduced boilerplate code -->
         <dependency>
@@ -163,6 +157,11 @@
             <version>9.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>jakarta.annotation</groupId>
@@ -185,19 +184,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.diffblue.cover</groupId>
-            <artifactId>cover-annotations</artifactId>
-            <version>1.3.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.1.210</version>
-            <scope>test</scope>
         </dependency>
 
     </dependencies>
