--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,7 +12,7 @@ spring.datasource.hikari.maximum-pool-size=10
 # Redis Configuration for Caching
 #******************************************
 spring.cache.type=redis
-spring.cache.redis.cache-null-values=true
+spring.cache.redis.cache-null-values=false
 spring.cache.redis.time-to-live=300000
 spring.data.redis.url=${REDIS_URL}
 #******************************************
