--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ token.base.url=http://localhost:8090
 # Redis Configuration
 #******************************************
 spring.cache.type=redis
-spring.cache.redis.cache-null-values=true
+spring.cache.redis.cache-null-values=false
 spring.cache.redis.time-to-live=300000
 #******************************************
 # logging Configuration
