--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -12,7 +12,6 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
-    container: ghcr.io/railwayapp/cli:latest
     env:
       SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
@@ -33,13 +32,16 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven- 
+            ${{ runner.os }}-maven-
 
       - name: Build and Test with Maven
         run: mvn clean verify
 
       - name: Package Application
         run: mvn package -DskipTests
+
+      - name: Install Railway CLI
+        run: npm install -g @railway/cli
 
       - name: Deploy to Railway
         run: railway up --service=${{ env.SVC_ID }}
