--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -12,9 +12,6 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-latest
-    env:
-      SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
     steps:
       - name: Checkout Repository
@@ -40,8 +37,25 @@ jobs:
       - name: Package Application
         run: mvn package -DskipTests
 
+
+  deploy-job:
+    runs-on: ubuntu-latest
+    needs: build
+    container: ghcr.io/railwayapp/cli:latest
+    env:
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up --service=${{ env.RAILWAY_TOKEN }}
+        run: railway up
