--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -38,7 +38,7 @@ jobs:
         run: mvn package -DskipTests
 
 
-  deploy-job:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     container: ghcr.io/railwayapp/cli:latest
@@ -48,11 +48,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
