--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -49,6 +49,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
