--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -49,10 +49,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+      - name: Install Node.js
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
+          sudo apt-get install -y nodejs
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
