--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install Node.js
         run: |
-          curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
+          curl -fsSL https://deb.nodesource.com/setup_16.0 | bash -
           sudo apt-get install -y nodejs
 
       - name: Install Railway CLI
