--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -49,9 +49,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: Install curl and bash
         run: |
-          curl -fsSL https://deb.nodesource.com/setup_16.0 | bash -
+          apt-get update
+          apt-get install -y curl bash
+
+      - name: Install Node.js v20.0
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
           sudo apt-get install -y nodejs
 
       - name: Install Railway CLI
