--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -29,7 +29,7 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven- 
+            ${{ runner.os }}-maven-
 
       - name: Build and Test with Maven
         run: mvn clean verify
@@ -41,7 +41,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    container: ghcr.io/railwayapp/cli:latest
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
@@ -51,8 +50,8 @@ jobs:
 
       - name: Install curl and bash
         run: |
-          apt-get update
-          apt-get install -y curl bash
+          sudo apt-get update
+          sudo apt-get install -y curl bash
 
       - name: Install Node.js v20.0
         run: |
