--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -43,6 +43,7 @@ jobs:
     needs: build
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
 
     steps:
       - name: Checkout code
@@ -62,4 +63,4 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up
+        run: railway up --service=${{ env.SVC_ID }}
