--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -41,26 +41,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    container: ghcr.io/railwayapp/cli:latest
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install curl and bash
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl bash
-
-      - name: Install Node.js v20.0
-        run: |
-          curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-          sudo apt-get install -y nodejs
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy to Railway
-        run: railway up --service=${{ env.SVC_ID }}
+      - uses: actions/checkout@v3
+      - run: railway up --service=${{ env.SVC_ID }}
