--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -48,5 +48,9 @@ jobs:
       SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
 
     steps:
+      - name: Debug Environment Variables
+        run: |
+          echo "SVC_ID is: $SVC_ID"
+
       - uses: actions/checkout@v4
       - run: railway up --service=${{ env.SVC_ID }}
