--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -39,18 +39,14 @@ jobs:
 
 
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    container: ghcr.io/railwayapp/cli:latest
-    env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
-
-    steps:
-      - name: Debug Environment Variables
-        run: |
-          echo "SVC_ID is: $SVC_ID"
-
-      - uses: actions/checkout@v4
-      - run: railway up --service=${{ env.SVC_ID }}
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    container: ghcr.io/railwayapp/cli:latest
+#    env:
+#      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+#      SVC_ID: 28678633-e983-4166-82ea-32ba216ac497
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#      - run: railway up --service=${{ env.SVC_ID }}
