--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.datasource.hikari.maximum-pool-size=10
 #******************************************
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=false
-spring.cache.redis.time-to-live=300000
+#spring.cache.redis.time-to-live=300000
 spring.data.redis.url=${REDIS_URL}
 #******************************************
 # JPA settings for production
