--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -56,6 +56,6 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 cors.allowed-origins=${BASE_URL},${FRONT_BASE_URL}
 spring.jpa.open-in-view=false
 # Server settings
-server.port=${PORT}
+server.port=${PORT:8080}
 server.address=0.0.0.0
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
