--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,7 +18,7 @@ spring.data.redis.url=${REDIS_URL}
 #******************************************
 # JPA settings for production
 #******************************************
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 #******************************************
 # JPA (Hibernate) settings
