--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -59,3 +59,4 @@ spring.jpa.open-in-view=false
 server.port=${PORT:8080}
 server.address=0.0.0.0
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+server.forward-headers-strategy=framework
