--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,13 +19,13 @@ spring.data.redis.url=${REDIS_URL}
 # JPA settings for production
 #******************************************
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
-spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.default_schema=public
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 #******************************************
 # Security Configuration for JWT
 #******************************************
