--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,13 +19,14 @@ spring.data.redis.url=${REDIS_URL}
 # JPA settings for production
 #******************************************
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #******************************************
 # JPA (Hibernate) settings
 #******************************************
 #spring.jpa.properties.hibernate.default_schema=public
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.open-in-view=false
 #******************************************
 # Security Configuration for JWT
 #******************************************
@@ -54,9 +55,20 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 # Security settings
 #******************************************
 cors.allowed-origins=${ALLOWED_ORIGINS}
-spring.jpa.open-in-view=false
 # Server settings
 server.port=${PORT:8080}
 server.address=0.0.0.0
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#******************************************
+# Forward Headers (for proxies)
+#******************************************
 server.forward-headers-strategy=framework
+#******************************************
+# Logging Configuration
+#******************************************
+logging.level.root=info
+logging.level.org.springframework=warn
+logging.level.org.hibernate=warn
+logging.file.name=/var/log/application.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=7
