--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -54,3 +54,13 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # Forward Headers (for proxies)
 #******************************************
 server.forward-headers-strategy=framework
+#******************************************
+# Logging Configuration
+#******************************************
+logging.level.root=info
+logging.level.org.springframework=warn
+logging.level.org.hibernate=warn
+# Specific loggers to suppress
+logging.level.org.springframework.transaction.interceptor=OFF
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql=OFF
