--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,6 +61,6 @@ logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
 # Specific loggers to suppress
-logging.level.org.springframework.transaction.interceptor=OFF
-logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.type.descriptor.sql=OFF
+logging.level.org.springframework.transaction.interceptor=off
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type.descriptor.sql=off
