--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -60,7 +60,13 @@ server.forward-headers-strategy=framework
 logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
-# Specific loggers to suppress
 logging.level.org.springframework.transaction.interceptor=off
-logging.level.org.hibernate.SQL=off
-logging.level.org.hibernate.type.descriptor.sql=off
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql=error
+logging.level.org.springframework.jdbc=error
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+logging.level.com.spring.nuqta=warn
+logging.pattern.console={"timestamp":"%d{yyyy-MM-dd HH:mm:ss.SSS}","level":"%level"
