--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -46,9 +46,10 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 # Security settings
 #******************************************
 cors.allowed-origins=${ALLOWED_ORIGINS}
+#******************************************
 # Server settings
+#******************************************
 server.port=${PORT:8080}
-server.address=0.0.0.0
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #******************************************
 # Forward Headers (for proxies)
@@ -61,4 +62,4 @@ logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
 spring.jpa.show-sql=false
-logging.pattern.console={"timestamp":"%d{yyyy-MM-dd HH:mm:ss.SSS}","level":"%level"
+logging.pattern.console={"timestamp":"%d{yyyy-MM-dd HH:mm:ss.SSS}","level":"%level","thread":"%thread","logger":"%logger{36}","message":"%msg"}
