--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,5 +61,14 @@ server.forward-headers-strategy=framework
 logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
-spring.jpa.show-sql=false
-logging.pattern.console={"timestamp":"%d{yyyy-MM-dd HH:mm:ss.SSS}","level":"%level","thread":"%thread","logger":"%logger{36}","message":"%msg"}
+logging.pattern.console={timestamp:"%d{yyyy-MM-dd HH:mm:ss.SSS}",level:"%level",logger:"%logger{36}",message:"%msg"}
+# SQL Formatting Configuration
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.show_sql=true
+# Set this to true if you want to see SQL statements in logs
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Disable pretty-printing SQL (makes it single-line)
+spring.jpa.properties.hibernate.format_sql=false
