--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,8 +51,15 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.data.redis=info
+logging.pattern.console=\
+  \u001b[38;5;214mtimestamp\u001b[0m: \u001b[38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"\u001b[0m,\n\
+  \u001b[38;5;219mlevel\u001b[0m: %clr(%5p)\u001b[0m,\
+  \u001b[38;5;117mapp\u001b[0m: \u001b[38;5;51m[Nuqta]\u001b[0m,\
+  \u001b[38;5;226mlogger\u001b[0m: \u001b[38;5;227m"%logger{40}"\u001b[0m,\n\
+  \u001b[38;5;195mmessage\u001b[0m: \u001b[38;5;15m"%m"\u001b[0m\n \
+  ---------------------------------------------------------------------------------\n
 #spring.main.allow-circular-references=true
 cors.allowed-origins=http://localhost:8090,http://localhost:4200
 spring.jpa.open-in-view=false
 server.port=${PORT:8090}
-spring.profiles.active=prod
+#spring.profiles.active=prod
