--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,7 +61,13 @@ server.forward-headers-strategy=framework
 logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
-logging.pattern.console={timestamp:"%d{yyyy-MM-dd HH:mm:ss.SSS}",level:"%level",logger:"%logger{36}",message:"%msg"}
+logging.pattern.console=\
+  \u001b[38;5;214mtimestamp\u001b[0m: \u001b[38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"\u001b[0m,\n\
+  \u001b[38;5;219mlevel\u001b[0m: %clr(%5p)\u001b[0m,\
+  \u001b[38;5;117mapp\u001b[0m: \u001b[38;5;51m[Nuqta]\u001b[0m,\
+  \u001b[38;5;226mlogger\u001b[0m: \u001b[38;5;227m"%logger{40}"\u001b[0m,\n\
+  \u001b[38;5;195mmessage\u001b[0m: \u001b[38;5;15m"%m"\u001b[0m\n \
+  ---------------------------------------------------------------------------------\n
 # SQL Formatting Configuration
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
