--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Nuqta
+server.port=${PORT:8090}
 #******************************************
 #DB connection (postgresql)
 #******************************************
@@ -11,6 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #******************************************
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
@@ -57,9 +59,10 @@ logging.pattern.console=\
   [38;5;117mapp[0m: [38;5;51m[Nuqta][0m,\
   [38;5;226mlogger[0m: [38;5;227m"%logger{40}"[0m,\n\
   [38;5;195mmessage[0m: [38;5;15m"%m"[0m\n \
-  ---------------------------------------------------------------------------------\n
+  ---------------------------------------------------------------------------------\n /
 #spring.main.allow-circular-references=true
+#******************************************
+# profiles
+#******************************************
 cors.allowed-origins=http://localhost:8090,http://localhost:4200
-spring.jpa.open-in-view=false
-server.port=${PORT:8090}
 spring.profiles.active=${PROFILES_ACTIVE:prod}
