--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,13 +53,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.data.redis=info
-logging.pattern.console=\
+logging.pattern.console=\n\
   [38;5;214mtimestamp[0m: [38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"[0m,\n\
   [38;5;219mlevel[0m: %clr(%5p)[0m,\
   [38;5;117mapp[0m: [38;5;51m[Nuqta][0m,\
   [38;5;226mlogger[0m: [38;5;227m"%logger{40}"[0m,\n\
   [38;5;195mmessage[0m: [38;5;15m"%m"[0m\n \
-  ---------------------------------------------------------------------------------\n /
+  ---------------------------------------------------------------------------------
 #spring.main.allow-circular-references=true
 #******************************************
 # profiles
