--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -62,18 +62,16 @@ logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
 logging.pattern.console=\
-  \u001b[38;5;214mtimestamp\u001b[0m: \u001b[38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"\u001b[0m,\n\
-  \u001b[38;5;219mlevel\u001b[0m: %clr(%5p)\u001b[0m,\
-  \u001b[38;5;117mapp\u001b[0m: \u001b[38;5;51m[Nuqta]\u001b[0m,\
-  \u001b[38;5;226mlogger\u001b[0m: \u001b[38;5;227m"%logger{40}"\u001b[0m,\n\
-  \u001b[38;5;195mmessage\u001b[0m: \u001b[38;5;15m"%m"\u001b[0m\n \
+  [38;5;214mtimestamp[0m: [38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"[0m,\n\
+  [38;5;219mlevel[0m: %clr(%5p)[0m,\
+  [38;5;117mapp[0m: [38;5;51m[Nuqta][0m,\
+  [38;5;226mlogger[0m: [38;5;227m"%logger{40}"[0m,\n\
+  [38;5;195mmessage[0m: [38;5;15m"%m"[0m\n \
   ---------------------------------------------------------------------------------\n
 # SQL Formatting Configuration
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.show_sql=true
-# Set this to true if you want to see SQL statements in logs
-spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Disable pretty-printing SQL (makes it single-line)
