Send Mail to User when accept request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,4 +65,4 @@ logging.pattern.console=\n\
 # profiles
 #******************************************
 cors.allowed-origins=http://localhost:8090,http://localhost:4200
-spring.profiles.active=${PROFILES_ACTIVE:prod}
+#spring.profiles.active=${PROFILES_ACTIVE:prod}
