Handle send mail when accept req

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,13 +61,13 @@ server.forward-headers-strategy=framework
 logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
-logging.pattern.console=\
+logging.pattern.console=\n\
   [38;5;214mtimestamp[0m: [38;5;85m"%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX}"[0m,\n\
   [38;5;219mlevel[0m: %clr(%5p)[0m,\
   [38;5;117mapp[0m: [38;5;51m[Nuqta][0m,\
   [38;5;226mlogger[0m: [38;5;227m"%logger{40}"[0m,\n\
   [38;5;195mmessage[0m: [38;5;15m"%m"[0m\n \
-  ---------------------------------------------------------------------------------\n
+  ---------------------------------------------------------------------------------
 # SQL Formatting Configuration
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
