Handle send mail when accept req

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,4 +58,4 @@ logging.level.org.springframework.data.redis=info
 # profiles
 #******************************************
 cors.allowed-origins=http://localhost:8090,http://localhost:4200
-spring.profiles.active=${PROFILES_ACTIVE:prod}
+#spring.profiles.active=${PROFILES_ACTIVE:prod}
