--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.data.redis.url=${REDIS_URL}
 #******************************************
 # JPA settings for production
 #******************************************
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #******************************************
 # Security Configuration for JWT
 #******************************************
